# quadric_raytraycer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: architecture.puml
include/: Camera.h  Cone.h  Cylinder.h  Ellipsoid.h  HitRecord.h  Hittable.h  HittableList.h  Material.h  Ray.h  RotateX.h  RotateZ.h  Sphere.h  Translate.h  Vec3.h
include/acceleration/: AABB.h  Octree.h  OctreeNode.h
include/core/: Camera.h  Material.h  Ray.h  Vec3.h
include/debug/: AABBDebug.h
include/hittable/: HitRecord.h  Hittable.h  HittableList.h
include/primitives/: Cone.h  Cylinder.h  Ellipsoid.h  Sphere.h
include/transforms/: RotateX.h  RotateZ.h  Translate.h
results/multiple_scenes_no_parallelisation/: benchmark.txt
results/multiple_scenes_tbb/: benchmark_tbb.txt
results/no_parallelisation/: benchmark.txt
results/reflections_no_parallelisation/: benchmark.txt
src/: main.cpp  main_tbb.cpp
src/acceleration/: AABB.cpp  Octree.cpp  OctreeNode.cpp
src/core/: Camera.cpp  Material.cpp  Ray.cpp  Vec3.cpp
src/debug/: AABBDebug.cpp
src/hittable/: Hittable.cpp  HittableList.cpp
src/primitives/: Cone.cpp  Cylinder.cpp  Ellipsoid.cpp  Sphere.cpp
src/scenes/: Scene.h  Scenes.cpp  Scenes.h
src/transforms/: RotateX.cpp  RotateZ.cpp  Translate.cpp
